Oversizing solved without overflow, zoom in disabled.

--- a/kursinis-01/styles/main.css
+++ b/kursinis-01/styles/main.css
@@ -1,5 +1,4 @@
 body {
-    overflow-x:hidden;  /* hiding some small measurement/rendering faults */
     font-family: 'Roboto', sans-serif, Arial, Helvetica;
     background-color: rgb(207, 216, 220);
 }
@@ -199,7 +198,7 @@ h1 {
 /* footer */
 
 footer {
-    max-width: 100vw;
+    max-width: 100%;  /* only this overrides slightly oversized Bootstrap row */
 }
 
 .foot-text {
